ポートフォリオサイトの開発を進めました

--- a/index.html
+++ b/index.html
@@ -7,9 +7,66 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
+
+  <script
+    src="https://kit.fontawesome.com/aea6c86e74.js"
+    crossorigin="anonymous"
+  ></script>
+
   <body>
-    <h1>ポートフォリオサイト</h1>
-    <script src="main.js"></script>
+    <header>
+      <h1>Ichiyo Portfolio</h1>
+    </header>
+   <main>
+    <h2> Who is he? </h2>
+    <div class="center1">
+     <a href="./" class="btn1">
+      <span class="btn__text1">FROM</span><!-- デフォルトの文字 -->
+      <span class="btn__text1">OKINAWA!</span><!-- ホバー時に表示する文字 -->
+     </a>
+    </div>
+
+    <div class="center2">
+      <a href="./" class="btn2">
+       <span class="btn__text2">AGE</span><!-- デフォルトの文字 -->
+       <span class="btn__text2">20!</span><!-- ホバー時に表示する文字 -->
+      </a>
+    </div>
+
+    <div class="center3">
+      <a href="./" class="btn3">
+       <span class="btn__text3">HOBBY</span><!-- デフォルトの文字 -->
+       <span class="btn__text3">TRAVEL!</span><!-- ホバー時に表示する文字 -->
+      </a>
+    </div>
+
+    <div class="center4">
+      <a href="./" class="btn4">
+       <span class="btn__text4">UNIVERSITY</span><!-- デフォルトの文字 -->
+       <span class="btn__text4">KYUSHU!
+       </span><!-- ホバー時に表示する文字 -->
+      </a>
+    </div>
+
+
+
+    <div class="button">
+      <button class="buttonA" id="buttonA">読みました！</button>
+    </div> 
+
+     <script src="main.js"></script>
+    </main>
+
+    <footer>
+      <div>
+        <p class="SNS">ぜひフォローしてね ⇓ </p>
+      </div>
+      <a href="https://www.instagram.com/ichi6756/"><i class="fa-brands fa-instagram"></i ></a>
+      <a href="https://twitter.com/ichiyo41173049"><i class="fa-brands fa-twitter"></i></i ></a>  
+    </footer>
+
   </body>
+
 </html>
